Project

General

Profile

Actions

Bug #21018

closed

Show invalid command line option more properly

Bug #21018: Show invalid command line option more properly
1

Added by nobu (Nobuyoshi Nakada) about 1 year ago. Updated about 1 year ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:120556]

Description

Currently the invalid command line option character is printed as-is.

This makes the error message confusing sometimes.

$ ruby -$'\rx'
  (-h will show valid options) (RuntimeError)

$ ruby -$'\U1f608'
ruby: invalid option -?  (-h will show valid options) (RuntimeError)

These are actually:

$ ruby -$'\rx' |& cat -e
ruby: invalid option -^M  (-h will show valid options) (RuntimeError)$

$ ruby -$'\U1f608' |& cat -e
ruby: invalid option -M-p  (-h will show valid options) (RuntimeError)$

I think control characters and multibyte characters should be printed properly.

Updated by nobu (Nobuyoshi Nakada) about 1 year ago Actions #1

  • Status changed from Open to Closed

Applied in changeset git|dfe6b7c02efa3bc2f5426eb64107ac0ac45a66a4.


[Bug #21018] Show invalid command line option more properly

Actions

Also available in: PDF Atom