[Bug #21018] Show invalid command line option more properly